dev/tests/cases/pos/29_sysrun_exit.tv
df main() -> void {
    set code: i64 = sys_run("exit 3");
    echo!(code);
    set ok: i64 = sys_run("exit 0");
    echo!(ok);
    exit(5);
}
