dev/tests/cases/neg/43_join_no_task.tv
df main() -> void {
    fixed k: i64 = join(42);
    echo!(k);
}
